COMPASS-551: Fix long collection name overflow

--- a/packages/compass-serverstats/styles/rtss-lists.less
+++ b/packages/compass-serverstats/styles/rtss-lists.less
@@ -140,6 +140,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  width: 80%;
 }
 .rt-lists__rw {
   display: flex;
